--- a/Ecologia/ecologia.html
+++ b/Ecologia/ecologia.html
@@ -4,12 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecologia</title>
+    <title>Projeto e Ecologia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Ecologia</h1>
-    <hr>
-    <p>Alguma coisa vamos fazer</p>
+    <hr id="hr1"> <hr id="hr2"> <hr id="hr3">
+    <br> <hr id="hr4"> <br>
+    <div id="div01">
+        <p>
+            Texto 1 sobre ecologia: o que é? + imagem 
+        </p>
+        <p>
+            Texto 2 sobre ecologia: o que podemos fazer? + imagem
+        </p>
+        <p>
+            Texto de conclusão + imagem do desenho 
+        </p>
+    </div>
+    <hr id="hr5">
+    <div id="div02">
+        <p>Créditos: <br> Nome de quem desenhou</p>
+    </div>
 </body>
 </html>
