--- a/Ecologia/ecologia.html
+++ b/Ecologia/ecologia.html
@@ -22,9 +22,9 @@
             Texto de conclusão + imagem do desenho 
         </p>
     </div>
-    <hr id="hr5">
+    <br> <hr id="hr5"> <br>
     <div id="div02">
-        <p>Créditos: <br> Nome de quem desenhou</p>
+        <p>Créditos: <br> Gonçalo Rodrigues 11.º B</p>
     </div>
 </body>
 </html>
