--- a/Ecologia/ecologia.html
+++ b/Ecologia/ecologia.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
-<html lang="pt-pt">
-<head>
+<!-- Created By CodingNepal - www.codingnepalweb.com -->
+<html lang="en" dir="ltr">
+  <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto e Ecologia</title>
+    <!------<title> Website Layout | CodingLab</title>------>
     <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+   </head>
 <body>
-    <h1>Ecologia</h1>
-    <hr id="hr1"> <hr id="hr2"> <hr id="hr3">
-    <br> <hr id="hr4"> <br>
-    <div id="div01">
-        <p>
-            Texto 1 sobre ecologia: o que é? + imagem 
-        </p>
-        <p>
-            Texto 2 sobre ecologia: o que podemos fazer? + imagem
-        </p>
-        <p>
-            Texto de conclusão + imagem do desenho 
-        </p>
+  <nav>
+    <div class="menu">
+      <div class="logo">
+        <a href="#">Ecologia</a>
+      </div>
+      <ul>
+        <li><a href="https://mestrehq5.github.io/Moral_Project/">Página Inicial</a></li>
+      </ul>
     </div>
-    <br> <hr id="hr5"> <br>
-    <div id="div02">
-        <p>Créditos: <br> Gonçalo Rodrigues 11.º B</p>
+  </nav>
+  <div class="img"></div>
+  <div class="center">
+    <div class="title">Ecologia</div>
+    <div class="sub_title">O processo de manter a Terra viva</div>
+    <br> <br>
+    <div class="btns">
+      <p>
+        There is more
+      </p>
     </div>
+  </div>
 </body>
 </html>
