--- a/Ecologia/ecologia.html
+++ b/Ecologia/ecologia.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal - www.codingnepalweb.com -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!------<title> Website Layout | CodingLab</title>------>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+    <title>Ecologia 2022</title>
    </head>
 <body>
   <nav>
@@ -15,6 +14,8 @@
         <a href="#">Ecologia</a>
       </div>
       <ul>
+        <li><a href="https://mestrehq5.github.io/Moral_Project/Adolescência/adolescencia.html">Adolescência</a></li>
+        <li><a href="https://mestrehq5.github.io/Moral_Project/Projetos_Vida/projetos_vida.html">Projetos de Vida</a></li>
         <li><a href="https://mestrehq5.github.io/Moral_Project/">Página Inicial</a></li>
       </ul>
     </div>
@@ -25,10 +26,22 @@
     <div class="sub_title">O processo de manter a Terra viva</div>
     <br> <br>
     <div class="btns">
+      <h1> O que é Ecologia</h1>
       <p>
-        There is more
+        Texto sobre o que é ecologia
+      </p>
+      <br>
+      <h1> O que podemos fazer?</h1>
+      <p>
+        Texto sobre o que podemos fazer <br>
+        <br>
+        <br>
+        <br>
+        texto
+        <br>
       </p>
     </div>
+
   </div>
 </body>
 </html>
