Several updates Ecologia

--- a/Ecologia/ecologia.html
+++ b/Ecologia/ecologia.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
+<html lang="pt-pt">
+<head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ecologia</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-    <title>Ecologia 2022</title>
-   </head>
+</head>
 <body>
-  <nav>
-    <div class="menu">
-      <div class="logo">
-        <a href="#">Ecologia</a>
-      </div>
-      <ul>
-        <li><a href="https://mestrehq5.github.io/Moral_Project/Adolescência/adolescencia.html">Adolescência</a></li>
-        <li><a href="https://mestrehq5.github.io/Moral_Project/Projetos_Vida/projetos_vida.html">Projetos de Vida</a></li>
-        <li><a href="https://mestrehq5.github.io/Moral_Project/">Página Inicial</a></li>
-      </ul>
-    </div>
-  </nav>
-  <div class="img"></div>
-  <div class="center">
-    <div class="title">Ecologia</div>
-    <div class="sub_title">O processo de manter a Terra viva</div>
-    <br> <br>
-    <div class="btns">
-      <h1> O que é Ecologia</h1>
-      <p>
-        Texto sobre o que é ecologia
-      </p>
-      <br>
-      <h1> O que podemos fazer?</h1>
-      <p>
-        Texto sobre o que podemos fazer <br>
+    <main>
+        <h1>Ecologia</h1>
+        <hr>
         <br>
-        <br>
-        <br>
-        texto
-        <br>
-      </p>
-    </div>
-
-  </div>
+        <div>
+            <h3>O que é ecologia e sustentabilidade?</h3>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis veritatis ex repellendus expedita quo tempora accusamus. Assumenda quidem saepe unde quaerat cupiditate voluptatem officiis quasi aliquid ea, doloribus consequuntur adipisci.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum non reiciendis, vel repellat dolore explicabo error sit possimus est quia nulla. Totam error rem esse, cupiditate sed temporibus numquam quaerat!
+            </p>
+            <br>
+            <picture>
+                <source media="(min-width: 600px )" srcset="C:\Users\Mestre_Hq5\Desktop\Escola\Moral\Moral_Project\Ecologia\Ecologia01.png">
+                <img class="center" src="Ecologia02.png" alt="Imagem sobre ecologia">
+            <picture>
+            <br>
+            <hr>
+        <div>
+        <div>
+            <h3>O que podemos fazer?</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis error ut voluptatibus beatae nemo ipsum quod quasi, dicta ab, asperiores architecto optio laborum, fugit aliquam magni. Corporis obcaecati dolores sunt!
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda cupiditate non modi sunt, deserunt magni quos ullam, officiis nemo cumque praesentium animi dolorum nulla necessitatibus dicta obcaecati id, nisi qui.
+            </p>
+            <hr>
+        </div>
+        <div>
+            <h3>Desenho</h3>
+            <h4>Creditos: Nome do desenhador</h4>
+            <picture>
+                <source media="(min-width: 600px )" srcset="#">
+                <img src="#" alt="Foto do desenho">
+            </picture>
+        </div>
+    </main> 
 </body>
 </html>
