--- a/Ecologia/ecologia.html
+++ b/Ecologia/ecologia.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <h1>Ecologia</h1>
+        <h1>Ecologia - A ciência de manter a Terra viva</h1>
         <hr>
         <br>
         <div>
@@ -35,8 +35,8 @@
             <hr>
         </div>
         <div>
-            <h3>Desenho</h3>
-            <h4>Creditos: Nome do desenhador</h4>
+            <h3>Desenho do Projeto</h3>
+            <h4>Créditos: Nome do desenhador</h4>
             <picture>
                 <source media="(min-width: 600px )" srcset="#">
                 <img src="#" alt="Foto do desenho">
