--- a/Projetos_Vida/ecologia.html
+++ b/Projetos_Vida/ecologia.html
@@ -36,13 +36,11 @@
         </div>
         <div>
             <h3>Desenho do Projeto</h3>
-            <br>
+            <h4>Créditos: Nome do desenhador</h4>
             <picture>
                 <source media="(min-width: 600px )" srcset="#">
-                <img class="center" src="#" alt="Foto do desenho">
+                <img src="#" alt="Foto do desenho">
             </picture>
-            <br>
-            <h4>Créditos: Nome do desenhador</h4>
         </div>
     </main> 
 </body>
