--- a/Ecologia/ecologia.html
+++ b/Ecologia/ecologia.html
@@ -20,8 +20,8 @@
             </p>
             <br>
             <picture>
-                <source media="(min-width: 600px )" srcset="C:\Users\Mestre_Hq5\Desktop\Escola\Moral\Moral_Project\Ecologia\Ecologia01.png">
-                <img class="center" src="Ecologia02.png" alt="Imagem sobre ecologia">
+                <source media="(min-width: 600px )">
+                <img class="center" src="Ecologia01.png" alt="Imagem sobre ecologia">
             <picture>
             <br>
             <hr>
@@ -38,8 +38,8 @@
             <h3>Desenho do Projeto</h3>
             <br>
             <picture>
-                <source media="(min-width: 600px )" srcset="#">
-                <img class="center" src="#" alt="Foto do desenho">
+                <source media="(min-width: 600px )">
+                <img class="center" src="Ecologia01.png" alt="Foto do desenho">
             </picture>
             <br>
             <h4>Créditos: Nome do desenhador</h4>
