--- a/Adolescência/adolescencia.html
+++ b/Adolescência/adolescencia.html
@@ -9,14 +9,13 @@
 </head>
 <body>
     <main>
-        <h1>Ecologia - A ciência de manter a Terra viva</h1>
+        <h1>Adolescência - A fase das nossas vidas</h1>
         <hr>
         <br>
         <div>
-            <h3>O que é ecologia e sustentabilidade?</h3>
+            <h3>Adolescência desmistificada</h3>
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis veritatis ex repellendus expedita quo tempora accusamus. Assumenda quidem saepe unde quaerat cupiditate voluptatem officiis quasi aliquid ea, doloribus consequuntur adipisci.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum non reiciendis, vel repellat dolore explicabo error sit possimus est quia nulla. Totam error rem esse, cupiditate sed temporibus numquam quaerat!
+                A adolescência é uma das principais fases da nossas vida! Nós, adolescentes, vivemos numa fase em que estamos na transição entre a infância e a vida adulta. Perdemos a criança que há em nós e ganhamos algumas responsabilidades.
             </p>
             <br>
             <picture>
