--- a/Ecologia/ecologia.html
+++ b/Ecologia/ecologia.html
@@ -15,8 +15,16 @@
         <div>
             <h3>O que é ecologia e sustentabilidade?</h3>
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis veritatis ex repellendus expedita quo tempora accusamus. Assumenda quidem saepe unde quaerat cupiditate voluptatem officiis quasi aliquid ea, doloribus consequuntur adipisci.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum non reiciendis, vel repellat dolore explicabo error sit possimus est quia nulla. Totam error rem esse, cupiditate sed temporibus numquam quaerat!
+                Em ecologia, o termo sustentabilidade está relacionado, principalmente, com a manutenção dos recursos naturais, de forma a garantir a vida. Assim, quando se fala em sustentabilidade ecológica, buscam-se estratégias para o estabelecimento de prioridades conservacionistas. 
+
+            </p>
+            <p>
+                Vivemos numa sociedade consumista em que nos habituamos à comodidade dos nosso automóveis e satisfazemos todas as nossas necessidades em bens materiais. No fundo, <strong> " tudo o que precisamos, compramos " </strong> 
+                
+                Procura-se, portanto, e sempre que posível, reduzir a nossa pegada ecológica de forma a aproximar a velocidade de consumo à de formação dos recursos naturais.
+            </p>
+            <p>
+                Procura-se, portanto, e sempre que posível, reduzir a nossa pegada ecológica de forma a aproximar a velocidade de consumo à de formação dos recursos naturais.
             </p>
             <br>
             <picture>
@@ -29,8 +37,17 @@
         <div>
             <h3>O que podemos fazer?</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis error ut voluptatibus beatae nemo ipsum quod quasi, dicta ab, asperiores architecto optio laborum, fugit aliquam magni. Corporis obcaecati dolores sunt!
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda cupiditate non modi sunt, deserunt magni quos ullam, officiis nemo cumque praesentium animi dolorum nulla necessitatibus dicta obcaecati id, nisi qui.
+                Do mesmo modo que temos o direito aos recursos naturais, também temos o dever de 
+                Podemos ajudar de diversas maneiras:
+                <ul>
+                    <li> Economizar a água: banhos mais curtos; regar os jardins nas horas de menor calor... </li>
+                    <li> Consumir produtos biodegradáveis, de preferência, não embalados em plásticos </li>
+                    <li> Tentar reutilizar ou reciclar </li>
+                    <li> Adotar meios de transporte menos poluentes, como o exemplo os transportes públicos, ou até andar de bicicleta. </li>
+                    <li> ... </li>
+                </ul>
+
+                </p>  
             </p>
             <hr>
         </div>
