Projetos de Vida Arch

--- a/Projetos_Vida/projetos_vida.html
+++ b/Projetos_Vida/projetos_vida.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecologia</title>
+    <title>Projetos de Vida</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
-        <h1>Ecologia - A ciência de manter a Terra viva</h1>
+        <h1>Projetos de Vida - o que posso decidir sobre o meu futuro?</h1>
         <hr>
         <br>
         <div>
-            <h3>O que é ecologia e sustentabilidade?</h3>
+            <h3> O que se entende por projeto de vida e vocação?</h3>
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis veritatis ex repellendus expedita quo tempora accusamus. Assumenda quidem saepe unde quaerat cupiditate voluptatem officiis quasi aliquid ea, doloribus consequuntur adipisci.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum non reiciendis, vel repellat dolore explicabo error sit possimus est quia nulla. Totam error rem esse, cupiditate sed temporibus numquam quaerat!
+                Projeto de vida é um processo de planeamento no qual nos conhecemos melhor, identificamos os nossos potenciais e interesses e estabelecemos metas e estratégias para as alcançar.  
+            </p>
+            <p>
+                Muitas vezes temos de seguir as nossas paixões e as nossas vocações, ou seja, seguir o nosso instinto em relação ao que queremos fazer na vida, profissional e pessoalmente. 
+            </p>
+            <p>
+                No fundo, o objetivo é nos sentirmos realizados em todas as dimensões de forma a que isso se traduza em maior felicidade e nos permita <strong>" Viver a vida "</strong>.
             </p>
             <br>
             <picture>
                 <source media="(min-width: 600px )" srcset="C:\Users\Mestre_Hq5\Desktop\Escola\Moral\Moral_Project\Ecologia\Ecologia01.png">
-                <img class="center" src="Ecologia02.png" alt="Imagem sobre ecologia">
+                <img class="center" src="Ecologia02.png" alt="Imagem sobre Projetos de Vida">
             <picture>
             <br>
             <hr>
