--- a/Projetos_Vida/projetos_vida.html
+++ b/Projetos_Vida/projetos_vida.html
@@ -32,10 +32,12 @@
             <hr>
         <div>
         <div>
-            <h3>O que podemos fazer?</h3>
+            <h3> Como posso descobrir o meu projeto e as minhas vocações?</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis error ut voluptatibus beatae nemo ipsum quod quasi, dicta ab, asperiores architecto optio laborum, fugit aliquam magni. Corporis obcaecati dolores sunt!
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda cupiditate non modi sunt, deserunt magni quos ullam, officiis nemo cumque praesentium animi dolorum nulla necessitatibus dicta obcaecati id, nisi qui.
+                Decerto que tens disciplinas favoritas... os teus interesses revelam-se sobretudo nas tuas aptidões nas mais variadas matérias. Aquilo que mais gostas de apreender ou fazer é, quase de certeza, o ponto de partida para o teu futuro, para o curso que decidirás seguir e para a profissão que sonhas ter.
+            </p>
+            <p>
+                Os teus sonhos são também uma parte fundamental do teu progresso. Sem dúvida já pensaste o que queres seguir e podes já ter feito algumas escolhas em relação a isso. 
             </p>
             <hr>
         </div>
