--- a/Adolescência/adolescencia.html
+++ b/Adolescência/adolescencia.html
@@ -13,23 +13,29 @@
         <hr>
         <br>
         <div>
-            <h3>Adolescência desmistificada</h3>
+            <h3>E então, o que acontece na adolescência?</h3>
             <p>
                 A adolescência é uma das principais fases da nossas vida! Nós, adolescentes, vivemos numa fase em que estamos na transição entre a infância e a vida adulta. Perdemos a criança que há em nós e ganhamos algumas responsabilidades.
             </p>
+            <p>
+                Nesta idade começamos a formar grupos e a passar mais tempo com aqueles com os quais mais nos identificamos, e formamos amigos para a vida. O amor é também uma parte essencial da adolescência: não nos podemos fechar em nós mesmos; temos de viver socialmente, abrir-nos aos outros e deixá-los entrar nas nossas vidas, sejam eles os nossos amigos ouu eventuais namoradas/namorados.
+            </p>
             <br>
             <picture>
-                <source media="(min-width: 600px )" srcset="C:\Users\Mestre_Hq5\Desktop\Escola\Moral\Moral_Project\Ecologia\Ecologia01.png">
-                <img class="center" src="Ecologia02.png" alt="Imagem sobre ecologia">
+                <source media="(min-width: 600px )">
+                <img class="center" src="Imagem01.png" alt="Imagem sobre Adolescência - A amizade">
+
             <picture>
             <br>
             <hr>
         <div>
         <div>
-            <h3>O que podemos fazer?</h3>
+            <h3>A nossa messagem para ti...</h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis error ut voluptatibus beatae nemo ipsum quod quasi, dicta ab, asperiores architecto optio laborum, fugit aliquam magni. Corporis obcaecati dolores sunt!
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda cupiditate non modi sunt, deserunt magni quos ullam, officiis nemo cumque praesentium animi dolorum nulla necessitatibus dicta obcaecati id, nisi qui.
+                O que podemos dizer...? <strong>"Aproveita que a vida não volta atrás!"</strong> Desfruta enquanto ainda não és adulto. Não penses que nunca podes fazer nada porque ainda não és adulto. Aproveita o presente e a tua Adolescênia, a companhia dos teus amigos e família, daqueles que te querem bem.
+            </p>
+            <p>
+                Não te iludas, a partir daqui é só mais trabalho e preocupações, não queiras crescer depressa! Vive a vida a seu tempo!
             </p>
             <hr>
         </div>
@@ -37,8 +43,8 @@
             <h3>Desenho do Projeto</h3>
             <h4>Créditos: Nome do desenhador</h4>
             <picture>
-                <source media="(min-width: 600px )" srcset="#">
-                <img src="#" alt="Foto do desenho">
+                <source media="(min-width: 600px )">
+                <img class="center" src="#" alt="Foto do desenho">
             </picture>
         </div>
     </main> 
