--- a/Projetos_Vida/projetos_vida.html
+++ b/Projetos_Vida/projetos_vida.html
@@ -46,7 +46,7 @@
             <h4>Créditos: Nome do desenhador</h4>
             <picture>
                 <source media="(min-width: 600px )" srcset="#">
-                <img src="#" alt="Foto do desenho">
+                <img class="center" src="#" alt="Foto do desenho">
             </picture>
         </div>
     </main> 
