--- a/Projetos_Vida/projetos_vida.html
+++ b/Projetos_Vida/projetos_vida.html
@@ -25,8 +25,8 @@
             </p>
             <br>
             <picture>
-                <source media="(min-width: 600px )" srcset="C:\Users\Mestre_Hq5\Desktop\Escola\Moral\Moral_Project\Ecologia\Ecologia01.png">
-                <img class="center" src="Ecologia02.png" alt="Imagem sobre Projetos de Vida">
+                <source media="(min-width: 600px )">
+                <img class="center" src="Imagem01.jpg" alt="Imagem sobre Projetos de Vida">
             <picture>
             <br>
             <hr>
