--- a/Adolescência/adolescencia.html
+++ b/Adolescência/adolescencia.html
@@ -12,6 +12,7 @@
         <h1>Adolescência - A fase das nossas vidas</h1>
         <hr>
         <br>
+        <button onclick="window.location.href = 'https://mestrehq5.github.io/Moral_Project/Main/main.html';"> Página Inicial </button>
         <div>
             <h3>E então, o que acontece na adolescência?</h3>
             <p>
