--- a/Ecologia/ecologia.html
+++ b/Ecologia/ecologia.html
@@ -12,6 +12,7 @@
         <h1>Ecologia - A ciência de manter a Terra viva</h1>
         <hr>
         <br>
+        <button onclick="window.location.href = 'https://mestrehq5.github.io/Moral_Project/Main/main.html';"> Página Inicial </button>
         <div>
             <h3>O que é ecologia e sustentabilidade?</h3>
             <p>
