--- a/Projetos_Vida/projetos_vida.html
+++ b/Projetos_Vida/projetos_vida.html
@@ -12,6 +12,7 @@
         <h1>Projetos de Vida - o que posso decidir sobre o meu futuro?</h1>
         <hr>
         <br>
+        <button onclick="window.location.href = 'https://mestrehq5.github.io/Moral_Project/Main/main.html';"> Página Inicial </button>
         <div>
             <h3> O que se entende por projeto de vida e vocação?</h3>
             <p>
