--- a/Adolescência/adolescencia.html
+++ b/Adolescência/adolescencia.html
@@ -42,11 +42,11 @@
         </div>
         <div>
             <h3>Desenho do Projeto</h3>
-            <h4>Créditos: Nome do desenhador</h4>
             <picture>
                 <source media="(min-width: 600px )">
-                <img class="center" src="#" alt="Foto do desenho">
+                <img class="center" src="Imagem01.png" alt="Foto do desenho">
             </picture>
+            <h4>Créditos: Nome do desenhador</h4>
         </div>
     </main> 
 </body>
