--- a/Projetos_Vida/projetos_vida.html
+++ b/Projetos_Vida/projetos_vida.html
@@ -44,11 +44,11 @@
         </div>
         <div>
             <h3>Desenho do Projeto</h3>
-            <h4>Créditos: Nome do desenhador</h4>
             <picture>
                 <source media="(min-width: 600px )" srcset="#">
-                <img class="center" src="#" alt="Foto do desenho">
+                <img class="center" src="Imagem01.jpg" alt="Foto do desenho">
             </picture>
+            <h4>Créditos: Nome do desenhador</h4>
         </div>
     </main> 
 </body>
