--- a/Adolescência/adolescencia.html
+++ b/Adolescência/adolescencia.html
@@ -44,9 +44,9 @@
             <h3>Desenho do Projeto</h3>
             <picture>
                 <source media="(min-width: 600px )">
-                <img class="center" src="Imagem01.png" alt="Foto do desenho">
+                <img id="des" class="center" src="" alt="Foto do desenho">
             </picture>
-            <h4>Créditos: Nome do desenhador</h4>
+            <h4>Créditos: Raíssa Sousa 10.ºF</h4>
         </div>
     </main> 
 </body>
