--- a/Ecologia/ecologia.html
+++ b/Ecologia/ecologia.html
@@ -57,10 +57,10 @@
             <br>
             <picture>
                 <source media="(min-width: 600px )">
-                <img class="center" src="Ecologia01.png" alt="Foto do desenho">
+                <img id="des" class="center" src="ecologia.jpeg" alt="Foto do desenho">
             </picture>
             <br>
-            <h4>Créditos: Nome do desenhador</h4>
+            <h4>Créditos: Maria Rita 10.º F</h4>
         </div>
     </main> 
 </body>
