--- a/Main/main.html
+++ b/Main/main.html
@@ -32,10 +32,17 @@
                     Enjoy :P
                 </p>  
             <hr>
+
+            <div>
+                <h3>Desenho do Projeto</h3>
+                <picture>
+                    <source media="(min-width: 600px )">
+                    <img ide="des" class="center" src="Imagem01.png" alt="Foto do desenho">
+                </picture>
+                <h4>Créditos: Daniel Silva 10.ºF</h4>
+            </div>
         <div>
         <br>
-        <img class="center" src="Imagem01.jpg" alt="Imagem EMRC" height="200px" width="300px">
-
     </main> 
 </body>
 </html>
