--- a/Projetos_Vida/projetos_vida.html
+++ b/Projetos_Vida/projetos_vida.html
@@ -45,10 +45,10 @@
         <div>
             <h3>Desenho do Projeto</h3>
             <picture>
-                <source media="(min-width: 600px )" srcset="#">
-                <img class="center" src="Imagem01.jpg" alt="Foto do desenho">
+                <source media="(min-width: 600px )">
+                <img id="des" class="center" src="projetovida.jpeg" alt="Foto do desenho">
             </picture>
-            <h4>Créditos: Nome do desenhador</h4>
+            <h4>Créditos: Lara Sousa</h4>
         </div>
     </main> 
 </body>
