--- a/Adolescência/adolescencia.html
+++ b/Adolescência/adolescencia.html
@@ -44,7 +44,7 @@
             <h3>Desenho do Projeto</h3>
             <picture>
                 <source media="(min-width: 600px )">
-                <img id="des" class="center" src="" alt="Foto do desenho">
+                <img id="des" class="center" src="Adolescencia.jpeg" alt="Foto do desenho">
             </picture>
             <h4>Créditos: Raíssa Sousa 10.ºF</h4>
         </div>
