--- a/Main/main.html
+++ b/Main/main.html
@@ -37,7 +37,7 @@
                 <h3>Desenho do Projeto</h3>
                 <picture>
                     <source media="(min-width: 600px )">
-                    <img ide="des" class="center" src="Imagem01.png" alt="Foto do desenho">
+                    <img ide="des" class="center" src="main.jpeg" alt="Foto do desenho">
                 </picture>
                 <h4>Créditos: Daniel Silva 10.ºF</h4>
             </div>
